# tunnelplane

./: .gitignore  bag.1.txt  bag.txt  bag_compressed.txt  bag_raw.txt  dc.sh  fly.sh
src/apriltags/launch/: realsense_apriltags.launch  usb_cam_apriltags.launch
src/apriltags/src/: apriltags.cpp
src/config/3dm/: results-imucam-good.txt
src/config/euroc/: euroc_config.yaml
src/config/hires/: hires_config.yaml
src/config/usbcamera/: usbcamera_global_config.yaml
src/feature_tracker/src/: feature_tracker.cpp  feature_tracker_node.cpp
src/offboard/: CMakeLists.txt  note.txt  package.xml
src/offboard/config/: calibration.yaml
src/offboard/launch/: estimator.launch  lidarsensor.launch  offboard.launch  px4.launch  px4_config.yaml  px4_pluginlists.yaml  republish.launch  sensor.launch
src/offboard/msg/: Arm.msg  DroneInfo.msg
src/offboard/scripts/: RT.py  cascadepid_backup.txt  dc.py  ekf_fixer.py  fly.1.py  fly.py  fly_add.py  fly_ex1.py  fly_ex2.py  fly_ex3.py  fly_ex4.py  fly_hold.py  flyfunction.py  nokf_dc.py  pose_dog.py  pose_man.py  tfmini_delay.py  ukf_dc.py
src/offboard/src/: offboard_node.cpp
src/realsense2_camera/cfg/: rs435_params.cfg
src/realsense2_camera/launch/: plane.launch  rs_aligned_depth.launch  rs_multiple_devices.launch  rs_rgbd.launch  rs_rgbd_official.launch  rs_rgbd_robot.launch
src/segmentation(nouse)/: CMakeLists.txt  package.xml
src/segmentation(nouse)/launch/: SAC.launch
src/segmentation(nouse)/src/: codebackup.cpp
src/tunnel_estimator/: CMakeLists.txt  package.xml
src/tunnel_estimator/launch/: estimator.launch  (+2 more)
src/vision(nouse)/: CMakeLists.txt  package.xml
src/vision(nouse)/include/robo_vision/: RMVideoCapture.hpp
src/vision(nouse)/launch/: usb_camera.launch
src/vision(nouse)/param/: camera-01-640.xml  camera-01-720.xml  camera-02-640.xml  camera-02-720.xml  param_config.xml
src/vision(nouse)/scripts/: test_cam.py
src/vision(nouse)/src/: RMVideoCapture.cpp  ReadCamera.cpp
viz/: analysis.py  fly.txt  note.txt  rpyviz.py
(+6 files in other folders)
